--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Malla Medicina Veterinaria</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Malla Medicina Veterinaria - UDLA</h1>
+
+  <div id="malla-container">
+    <!-- Ejemplo Semestre -->
+    <div class="semestre">
+      <h2>1° Semestre</h2>
+      <div class="ramo" data-id="matematica" onclick="toggleRamo(this)">Matemática general</div>
+      <div class="ramo" data-id="comunicacion">Taller de comunicación oral y escrita</div>
+      <div class="ramo" data-id="intro">Introducción a la medicina veterinaria</div>
+      <div class="ramo" data-id="biologia">Biología celular</div>
+      <div class="ramo" data-id="quimica">Química - Bioquímica</div>
+    </div>
+    
+    <!-- Agrega más semestres aquí -->
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
