--- a/index.html
+++ b/index.html
@@ -2,28 +2,24 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malla Medicina Veterinaria</title>
+  <title>Malla Medicina Veterinaria - UDLA</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Malla Medicina Veterinaria - UDLA</h1>
+  <h1>Malla Curricular - Medicina Veterinaria UDLA</h1>
+
+  <div class="leyenda">
+    <p><span class="ley color1"></span> Ramo disponible</p>
+    <p><span class="ley color2"></span> Ramo aprobado</p>
+    <p><span class="ley color3"></span> Ramo bloqueado (prerrequisitos no cumplidos)</p>
+  </div>
 
   <div id="malla-container">
-    <!-- Ejemplo Semestre -->
-    <div class="semestre">
-      <h2>1° Semestre</h2>
-      <div class="ramo" data-id="matematica" onclick="toggleRamo(this)">Matemática general</div>
-      <div class="ramo" data-id="comunicacion">Taller de comunicación oral y escrita</div>
-      <div class="ramo" data-id="intro">Introducción a la medicina veterinaria</div>
-      <div class="ramo" data-id="biologia">Biología celular</div>
-      <div class="ramo" data-id="quimica">Química - Bioquímica</div>
-    </div>
-    
-    <!-- Agrega más semestres aquí -->
+    <!-- Semestres generados por JS -->
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
