--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Malla Medicina Veterinaria - UDLA</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Malla Medicina Veterinaria</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Malla Curricular - Medicina Veterinaria UDLA</h1>
-
-  <div class="leyenda">
-    <p><span class="ley color1"></span> Ramo disponible</p>
-    <p><span class="ley color2"></span> Ramo aprobado</p>
-    <p><span class="ley color3"></span> Ramo bloqueado (prerrequisitos no cumplidos)</p>
-  </div>
-
-  <div id="malla-container">
-    <!-- Semestres generados por JS -->
-  </div>
-
+  <h1>Malla Medicina Veterinaria - UDLA</h1>
+  <div id="malla-container"></div>
   <script src="script.js"></script>
 </body>
 </html>
-
 
