--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Malla Interactiva Medicina Veterinaria</title>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+    <h1>Malla Curricular Medicina Veterinaria - UDLA</h1>
+    <div class="semester" id="semestre1">
+        <h2>1° Semestre</h2>
+        <div class="course pending" id="matematica" data-prereq="">Matemática general</div>
+        <div class="course pending" id="comunicacion" data-prereq="">Taller de comunicación oral y escrita</div>
+        <div class="course pending" id="introduccion" data-prereq="">Introducción a la medicina veterinaria</div>
+        <div class="course pending" id="biologia" data-prereq="">Biología celular</div>
+        <div class="course pending" id="quimica" data-prereq="">Química</div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
