--- a/index.html
+++ b/index.html
@@ -1,152 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Malla Curricular Medicina Veterinaria</title>
-  <link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Malla Medicina Veterinaria UDLA</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Malla Curricular Medicina Veterinaria - UDLA</h1>
-  <div id="curriculum-container">
-    <div class="semester">
-      <h2>1° semestre</h2>
-      <div class="course pending" data-name="Matemática general" data-prerequisites="">Matemática general</div>
-      <div class="course pending" data-name="-" data-prerequisites="">-</div>
-      <div class="course pending" data-name="Bioestadística" data-prerequisites="">Bioestadística</div>
-      <div class="course pending" data-name="Taller de comunicación" data-prerequisites="">Taller de comunicación</div>
-      <div class="course pending" data-name="oral y escrita" data-prerequisites="">oral y escrita</div>
-      <div class="course pending" data-name="Introducción a la" data-prerequisites="">Introducción a la</div>
-      <div class="course pending" data-name="medicina veterinaria" data-prerequisites="">medicina veterinaria</div>
-      <div class="course pending" data-name="Practica básica" data-prerequisites="">Practica básica</div>
-      <div class="course pending" data-name="Biología celular" data-prerequisites="">Biología celular</div>
-      <div class="course pending" data-name="▪" data-prerequisites="">▪</div>
-      <div class="course pending" data-name="Zoología" data-prerequisites="">Zoología</div>
-      <div class="course pending" data-name="Medio ambiente y" data-prerequisites="">Medio ambiente y</div>
-      <div class="course pending" data-name="gestión ambiental" data-prerequisites="">gestión ambiental</div>
-      <div class="course pending" data-name="Microbiología general y" data-prerequisites="">Microbiología general y</div>
-      <div class="course pending" data-name="veterinaria" data-prerequisites="">veterinaria</div>
-      <div class="course pending" data-name="Química" data-prerequisites="">Química</div>
-      <div class="course pending" data-name="Bioquímica" data-prerequisites="">Bioquímica</div>
-    </div>
-    <div class="semester">
-      <h2>2° semestre</h2>
-      <div class="course pending" data-name="matemática general" data-prerequisites="">matemática general</div>
-      <div class="course pending" data-name="Genética" data-prerequisites="">Genética</div>
-      <div class="course pending" data-name="Ingles 1" data-prerequisites="">Ingles 1</div>
-      <div class="course pending" data-name="Ingles 2" data-prerequisites="">Ingles 2</div>
-      <div class="course pending" data-name="Anatomía del canino" data-prerequisites="">Anatomía del canino</div>
-      <div class="course pending" data-name="Anatomía comparada" data-prerequisites="">Anatomía comparada</div>
-      <div class="course pending" data-name="Fisiología animal" data-prerequisites="">Fisiología animal</div>
-      <div class="course pending" data-name="Histoembriologia" data-prerequisites="">Histoembriologia</div>
-      <div class="course pending" data-name="Fisiopatología" data-prerequisites="">Fisiopatología</div>
-      <div class="course pending" data-name="Nutrición y" data-prerequisites="">Nutrición y</div>
-      <div class="course pending" data-name="alimentación animal" data-prerequisites="">alimentación animal</div>
-    </div>
-    <div class="semester">
-      <h2>3° semestre</h2>
-      <div class="course pending" data-name="Semiología" data-prerequisites="">Semiología</div>
-      <div class="course pending" data-name="Biología celular o" data-prerequisites="">Biología celular o</div>
-      <div class="course pending" data-name="Enfermedades" data-prerequisites="">Enfermedades</div>
-      <div class="course pending" data-name="parasitarias" data-prerequisites="">parasitarias</div>
-      <div class="course pending" data-name="Etología y bienestar" data-prerequisites="">Etología y bienestar</div>
-      <div class="course pending" data-name="animal" data-prerequisites="">animal</div>
-      <div class="course pending" data-name="Producción porcina" data-prerequisites="">Producción porcina</div>
-      <div class="course pending" data-name="medicina" data-prerequisites="">medicina</div>
-      <div class="course pending" data-name="Anatomía del" data-prerequisites="">Anatomía del</div>
-      <div class="course pending" data-name="canino" data-prerequisites="">canino</div>
-    </div>
-    <div class="semester">
-      <h2>4° semestre</h2>
-      <div class="course pending" data-name="Administración y" data-prerequisites="">Administración y</div>
-      <div class="course pending" data-name="emprendimiento" data-prerequisites="">emprendimiento</div>
-      <div class="course pending" data-name="veterinario" data-prerequisites="">veterinario</div>
-      <div class="course pending" data-name="Formulación y evaluación de" data-prerequisites="">Formulación y evaluación de</div>
-      <div class="course pending" data-name="proyectos agropecuarios" data-prerequisites="">proyectos agropecuarios</div>
-      <div class="course pending" data-name="Reproducción e" data-prerequisites="">Reproducción e</div>
-      <div class="course pending" data-name="inseminación artificial" data-prerequisites="">inseminación artificial</div>
-      <div class="course pending" data-name="Farmacología y" data-prerequisites="">Farmacología y</div>
-      <div class="course pending" data-name="toxicología" data-prerequisites="">toxicología</div>
-      <div class="course pending" data-name="Control de calidad de los" data-prerequisites="">Control de calidad de los</div>
-      <div class="course pending" data-name="alimentos" data-prerequisites="">alimentos</div>
-      <div class="course pending" data-name="Inmunología" data-prerequisites="">Inmunología</div>
-      <div class="course pending" data-name="Tecnología de los" data-prerequisites="">Tecnología de los</div>
-      <div class="course pending" data-name="producción ovinos y caprinos" data-prerequisites="">producción ovinos y caprinos</div>
-    </div>
-    <div class="semester">
-      <h2>5° semestre</h2>
-      <div class="course pending" data-name="Patología de sistemas" data-prerequisites="">Patología de sistemas</div>
-      <div class="course pending" data-name="Enfermedades infecciosas" data-prerequisites="">Enfermedades infecciosas</div>
-      <div class="course pending" data-name="Nutrición y alimentación" data-prerequisites="">Nutrición y alimentación</div>
-      <div class="course pending" data-name="Producción avícola" data-prerequisites="">Producción avícola</div>
-      <div class="course pending" data-name="Producción acuícola" data-prerequisites="">Producción acuícola</div>
-    </div>
-    <div class="semester">
-      <h2>6° semestre</h2>
-      <div class="course pending" data-name="Ginecología y" data-prerequisites="">Ginecología y</div>
-      <div class="course pending" data-name="obstetricia" data-prerequisites="">obstetricia</div>
-      <div class="course pending" data-name="Producción bovinos carne y" data-prerequisites="">Producción bovinos carne y</div>
-      <div class="course pending" data-name="leche" data-prerequisites="">leche</div>
-      <div class="course pending" data-name="Control de calidad de" data-prerequisites="">Control de calidad de</div>
-      <div class="course pending" data-name="los alimentos" data-prerequisites="">los alimentos</div>
-      <div class="course pending" data-name="Salud pública" data-prerequisites="">Salud pública</div>
-      <div class="course pending" data-name="alimentación" data-prerequisites="">alimentación</div>
-      <div class="course pending" data-name="Etología y" data-prerequisites="">Etología y</div>
-      <div class="course pending" data-name="bienestar animal" data-prerequisites="">bienestar animal</div>
-      <div class="course pending" data-name="farmacología y" data-prerequisites="">farmacología y</div>
-      <div class="course pending" data-name="Practica intermedia" data-prerequisites="">Practica intermedia</div>
-      <div class="course pending" data-name="infecciosas" data-prerequisites="">infecciosas</div>
-      <div class="course pending" data-name="Epidemiología" data-prerequisites="">Epidemiología</div>
-      <div class="course pending" data-name="Laboratorio clínico" data-prerequisites="">Laboratorio clínico</div>
-      <div class="course pending" data-name="Diagnostico por" data-prerequisites="">Diagnostico por</div>
-      <div class="course pending" data-name="imágenes" data-prerequisites="">imágenes</div>
-    </div>
-    <div class="semester">
-      <h2>7° semestre</h2>
-      <div class="course pending" data-name="Medicina animales" data-prerequisites="">Medicina animales</div>
-      <div class="course pending" data-name="mayores" data-prerequisites="">mayores</div>
-      <div class="course pending" data-name="Medicina de caninos" data-prerequisites="">Medicina de caninos</div>
-      <div class="course pending" data-name="Medicina de felinos" data-prerequisites="">Medicina de felinos</div>
-      <div class="course pending" data-name="Medicina de animales" data-prerequisites="">Medicina de animales</div>
-      <div class="course pending" data-name="exóticos" data-prerequisites="">exóticos</div>
-      <div class="course pending" data-name="Producción ovinos y" data-prerequisites="">Producción ovinos y</div>
-      <div class="course pending" data-name="caprinos" data-prerequisites="">caprinos</div>
-      <div class="course pending" data-name="inseminación" data-prerequisites="">inseminación</div>
-      <div class="course pending" data-name="artificial" data-prerequisites="">artificial</div>
-      <div class="course pending" data-name="Metodología de" data-prerequisites="">Metodología de</div>
-      <div class="course pending" data-name="investigación" data-prerequisites="">investigación</div>
-      <div class="course pending" data-name="Anatomía" data-prerequisites="">Anatomía</div>
-      <div class="course pending" data-name="comparada" data-prerequisites="">comparada</div>
-      <div class="course pending" data-name="Cirugía general" data-prerequisites="">Cirugía general</div>
-      <div class="course pending" data-name="Practica final" data-prerequisites="">Practica final</div>
-    </div>
-    <div class="semester">
-      <h2>8° semestre</h2>
-      <div class="course pending" data-name="Farmacología aplicada" data-prerequisites="">Farmacología aplicada</div>
-      <div class="course pending" data-name="Clínica de animales" data-prerequisites="">Clínica de animales</div>
-      <div class="course pending" data-name="menores" data-prerequisites="">menores</div>
-      <div class="course pending" data-name="Patología quirúrgica" data-prerequisites="">Patología quirúrgica</div>
-    </div>
-    <div class="semester">
-      <h2>9° semestre</h2>
-      <div class="course pending" data-name="Formulación y" data-prerequisites="">Formulación y</div>
-      <div class="course pending" data-name="evaluación de proyectos" data-prerequisites="">evaluación de proyectos</div>
-      <div class="course pending" data-name="agropecuarios" data-prerequisites="">agropecuarios</div>
-      <div class="course pending" data-name="Producción bovinos" data-prerequisites="">Producción bovinos</div>
-      <div class="course pending" data-name="carne y leche" data-prerequisites="">carne y leche</div>
-      <div class="course pending" data-name="Ginecología y obstetricia" data-prerequisites="">Ginecología y obstetricia</div>
-      <div class="course pending" data-name="Epidemiologia veterinaria" data-prerequisites="">Epidemiologia veterinaria</div>
-      <div class="course pending" data-name="Trabajo de titulación" data-prerequisites="">Trabajo de titulación</div>
-    </div>
-    <div class="semester">
-      <h2>10° semestre</h2>
-      <div class="course pending" data-name="Medicina de" data-prerequisites="">Medicina de</div>
-      <div class="course pending" data-name="caninos" data-prerequisites="">caninos</div>
-      <div class="course pending" data-name="Control de calidad" data-prerequisites="">Control de calidad</div>
-      <div class="course pending" data-name="de los alimentos" data-prerequisites="">de los alimentos</div>
-      <div class="course pending" data-name="Metodología de la" data-prerequisites="">Metodología de la</div>
-      <div class="course pending" data-name="Diagnóstico por" data-prerequisites="">Diagnóstico por</div>
-    </div>
-  </div>
+  <h1>Malla Medicina Veterinaria - UDLA</h1>
+  <div id="malla" class="malla-container"></div>
   <script src="script.js"></script>
 </body>
 </html>
