--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Malla Medicina Veterinaria - UDLA</h1>
+  <h1>Malla Curricular Medicina Veterinaria - UDLA</h1>
   <div id="malla" class="malla-container"></div>
+  <p class="instrucciones">
+    <strong>Instrucciones:</strong> Haz clic en un ramo para marcarlo como aprobado. 
+    Los ramos en rosado están pendientes. Los morados están aprobados. 
+    Los grises están bloqueados por prerrequisitos.
+  </p>
   <script src="script.js"></script>
 </body>
 </html>
