--- a/index.html
+++ b/index.html
@@ -2,28 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Malla Medicina Veterinaria - UDLA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Malla Interactiva Veterinaria</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Malla Curricular Medicina Veterinaria - UDLA</h1>
-
-  <div id="malla" class="malla-container"></div>
-
-  <p class="instrucciones">
-    <strong>Instrucciones:</strong> Haz clic en un ramo para marcarlo como aprobado.<br>
-    Los ramos en <span style="color: #ffc0cb; font-weight: bold;">rosado</span> están pendientes,<br>
-    los <span style="color: #9370db; font-weight: bold;">morado y tachados</span> están aprobados,<br>
-    y los <span style="color: #aaa; font-weight: bold;">grises</span> están bloqueados por prerrequisitos.
-  </p>
-
-  <footer style="text-align: center; margin-top: 30px;">
-    <button onclick="localStorage.clear(); location.reload();"
-      style="background-color: #db7093; color: white; padding: 10px 20px; border: none; border-radius: 8px; cursor: pointer;">
-      Reiniciar progreso
-    </button>
-  </footer>
+  <h1>Malla Interactiva - Medicina Veterinaria</h1>
+  <div id="malla-container"></div>
 
   <script src="script.js"></script>
 </body>
