--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <h1>Malla Interactiva - Medicina Veterinaria</h1>
+  <p style="text-align: center; max-width: 600px; margin: auto;">
+    Haz clic en los ramos para marcarlos como aprobados. Los ramos en gris están bloqueados hasta que cumplas sus prerrequisitos.
+  </p>
   <div id="malla-container"></div>
 
   <script src="script.js"></script>
