--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Malla Interactiva Veterinaria</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Malla Interactiva</title>
+  <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
-  <h1>Malla Interactiva - Medicina Veterinaria</h1>
-  <p style="text-align: center; max-width: 600px; margin: auto;">
-    Haz clic en los ramos para marcarlos como aprobados. Los ramos en gris están bloqueados hasta que cumplas sus prerrequisitos.
-  </p>
-  <div id="malla-container"></div>
+  <h1>Malla Veterinaria</h1>
+  <div id="malla"></div>
   <script src="script.js"></script>
 </body>
 </html>
