--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <h1>Malla Veterinaria</h1>
-  <div id="malla"></div>
+  <div id="malla">
   <script src="script.js"></script>
 </body>
-</html>
