--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <h1>Malla Veterinaria</h1>
-  <div id="malla">
+  <div id="malla"></div> 
+
   <script src="script.js"></script>
 </body>
+</html>
